# verbio-test

./: README.md  angular.json  karma.conf.js  package-lock.json  package.json  proxyconfig.json
be/: .gitlab-ci.yml  Cargo.toml  README.md
be/src/: main.rs
e2e/src/: app.e2e-spec.ts
src/: index.html  styles.scss
src/app/: app.component.spec.ts  app.component.ts  app.module.ts  auth.guard.ts  auth.service.ts  token-interceptor.service.ts  user.service.ts
src/app/admin/: admin.component.html  admin.component.scss  admin.component.ts
src/app/home/: home.component.html  home.component.ts
src/app/login/: login.component.html  login.component.scss  login.component.ts
src/app/logout/: logout.component.ts
src/scss/: mixins.scss
