[package]
name = "frontend-job-requirement"
version = "0.1.0"
authors = ["Carlos Quintana <cquintana@verbio.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.2.0"
actix-rt = "1.0.0"
actix-web = "2.0.0"
chrono = "0.4.10"
env_logger = "0.7.1"
jsonwebtoken = "7.0.0"
log = "0.4.8"
serde = {version ="1.0.102", features = ["derive"] }
serde_derive = "1.0.102"
serde_json = "1.0.41"
